--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<h1>Hello test app</h1>
-<app-users></app-users>
+<a [routerLink]="['/home']">Home</a>
+<a [routerLink]="['/manage']">Manage</a>
+<router-outlet></router-outlet>
