home page design ready

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<a [routerLink]="['/home']">Home</a>
-<a [routerLink]="['/manage']">Manage</a>
-<router-outlet></router-outlet>
+<nav>
+    <div>
+        <a [routerLink]="['/home']">Home</a>
+    </div>
+    <div>
+        <a [routerLink]="['/manage']">Manage</a>
+    </div>
+</nav>
+<div class="centered">
+    <router-outlet></router-outlet>
+</div>
