--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,7 +1,90 @@
 button {
-    width: 200px;
-    height: 80px;
+    width: 100px;
+    height: 40px;
 }
-.selected{
+
+.selected {
     color: red;
+}
+
+h1 {
+    background-color: #ffffff;
+    
+    text-align: center;
+    font-size: 30px;
+    font-weight: bold;
+    color: #000;
+    margin: 0;
+    padding: 3px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+li {
+    cursor: pointer;
+    display: inline-block;
+    padding: 3px;
+    margin: 3px;
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #ccc;
+    color: #000;
+    font-size: 10px;
+    font-weight: bold;
+    text-align: center;
+    width: 100px;
+    height: 40px;
+}
+
+ul {
+    /*order all li elements in the middle*/
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 0;
+    margin: 0;
+}
+        
+div.taskCard{
+    /*make the card look*/
+    border: 1px solid black;
+    border-radius: 5px;
+    background-color: #ccc;
+    color: #000;
+    font-size: 20px;
+    font-weight: bold;
+    text-align: center;
+    margin: 5px;
+    padding: 5px;
+    cursor: pointer;
+}
+
+div.taskCard .title{
+    /*make the title look*/
+    font-size: 20px;
+    font-weight: lighter;
+    color: #000;
+    margin: 0;
+    padding: 3px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+}
+
+div.taskCard .buttonContainer{
+    display: flex;
+    justify-content: right;
+}
+
+div.taskCard .descriptionContainer{
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    align-items: left;
+    font-size: small;
+    font-weight: lighter;
+    text-align: left;
+    margin: 5px;
+    padding: 5px;
 }
