--- a/src/app/manager/manager.component.html
+++ b/src/app/manager/manager.component.html
@@ -1,17 +1,74 @@
 <h1>Manager</h1>
-<h2>Here you will be able to</h2>
-<h3>Manage the users</h3>
-<p>- Add </p>
-<p>- Remove </p>
-<p>- Edit</p>
-
-<h3>Manage the tasks</h3>
-<p>- Add</p>
-<p>- Remove</p>
-<p>- Edit</p>
-
-<h3>See a report</h3>
-<p>- how many tasks are completed by each user</p>
-<p>- order by day,month,year</p>
-<p>- order by user</p>
-<p>- order by task</p>
+<h2>Here you are able to</h2>
+<div class="manageArea">
+    <h3>Manage the users</h3>
+    <div>
+        <ul>
+            <li>user1</li>
+            <li>user2</li>
+            <li>user3</li>
+        </ul>
+    </div>
+</div>
+<div class="manageArea">
+    <h3>Manage the tasks</h3>
+    <div>
+        <!--table of tasks-->
+        <table>
+            <tr>
+                <th>Task</th>
+                <th>Assigned to</th>
+                <th>Due date</th>
+            </tr>
+            <tr>
+                <td>task1</td>
+                <td>user1</td>
+                <td>date1</td>
+            </tr>
+            <tr>
+                <td>task2</td>
+                <td>user2</td>
+                <td>date2</td>
+            </tr>
+            <tr>
+                <td>task3</td>
+                <td>user3</td>
+                <td>date3</td>
+            </tr>
+        </table>
+    </div>
+</div>
+<div class="manageArea">
+    <h3>See a report</h3>
+    <p>- how many tasks are completed by each user</p>
+    <p>- order by day,month,year</p>
+    <p>- order by user</p>
+    <p>- order by task</p>
+</div>
+<dialog>
+    <h1>Manage your users</h1>
+    <div>
+        <table>
+            <tr>
+                <th>
+                    <h3>Users name</h3>
+                </th>
+            </tr>
+            <tr>
+                <td>
+                    John Connor
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Sarah Connor
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    Kyle Reese
+                </td>
+            </tr>
+        </table>
+    </div>
+</dialog>
